--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,26 @@ beautifulsoup4==4.14.3
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
+contourpy==1.3.3
 curl_cffi==0.13.0
+cycler==0.12.1
+fonttools==4.61.1
 frozendict==2.4.7
 idna==3.11
+Jinja2==3.1.6
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.8
 multitasking==0.0.12
 numpy==2.4.0
+packaging==25.0
 pandas==2.3.3
 peewee==3.18.3
+pillow==12.0.0
 platformdirs==4.5.1
 protobuf==6.33.2
 pycparser==2.23
+pyparsing==3.3.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.5
