--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ peewee==3.18.3
 pillow==12.0.0
 platformdirs==4.5.1
 protobuf==6.33.2
+psycopg2==2.9.11
+psycopg2-binary==2.9.11
 pycparser==2.23
 pyparsing==3.3.1
 python-dateutil==2.9.0.post0
@@ -31,6 +33,4 @@ typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.2
 websockets==15.0.1
-
-# documentation: libraries https://github.com/ranaroussi/yfinance
 yfinance==1.0
