--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ curl_cffi==0.13.0
 cycler==0.12.1
 fonttools==4.61.1
 frozendict==2.4.7
+greenlet==3.3.0
 idna==3.11
 Jinja2==3.1.6
 kiwisolver==1.4.9
@@ -20,6 +21,7 @@ peewee==3.18.3
 pillow==12.0.0
 platformdirs==4.5.1
 protobuf==6.33.2
+psycopg2==2.9.11
 psycopg2-binary==2.9.11
 pycparser==2.23
 pyparsing==3.3.1
@@ -28,6 +30,7 @@ pytz==2025.2
 requests==2.32.5
 six==1.17.0
 soupsieve==2.8.1
+SQLAlchemy==2.0.45
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.2
