--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
     ports:
-      - 54432:5432
+      - ${DB_PORT}:5432
     volumes:
       - ./pgdata:/var/lib/postgresql/data
 
