updated gitignore and logging paths to local directory

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,5 +34,6 @@ services:
       - ./options:/app/options
       - ./graphs:/app/graphs
       - ./errors:/app/errors
+      - ./logging:/app/logging
 
 
